Fin HTTPS + ajout nouvelle api